Fixed button size for projects on smaller screens.

--- a/src/styles/ProjectCard.css
+++ b/src/styles/ProjectCard.css
@@ -162,12 +162,6 @@
     padding: 0.25rem 0;
   }
 
-  .project-btns a {
-    height: 30px;
-    width: 30px;
-    font-size: 1.5rem;
-  }
-
   @media (max-width: 768px) {
     .project-container .project-banner {
       bottom: 40px; 
@@ -198,12 +192,6 @@
   .project-technologies {
     font-size: 0.8rem;
     padding: 0.2rem 0;
-  }
-
-  .project-btns a {
-    height: 25px;
-    width: 25px;
-    font-size: 1.2rem;
   }
 
 }
